--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "firebase": "^10.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.1",
     "react-router-dom": "^6.17.0",
+    "react-slick": "^0.29.0",
+    "slick-carousel": "^1.8.1",
     "sweetalert2": "^11.7.32"
   },
   "devDependencies": {
