--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
     "@material-tailwind/react": "^2.1.2",
+    "@mui/material": "^5.14.14",
+    "@mui/styled-engine-sc": "^6.0.0-alpha.2",
     "aos": "^2.3.4",
     "firebase": "^10.5.0",
     "react": "^18.2.0",
@@ -21,6 +25,7 @@
     "react-router-dom": "^6.17.0",
     "react-slick": "^0.29.0",
     "slick-carousel": "^1.8.1",
+    "styled-components": "^6.1.0",
     "sweetalert": "^2.1.2",
     "sweetalert2": "^11.7.32"
   },
